fix column grid spacing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -524,22 +524,26 @@ a:hover {
 .grid-container {
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(auto-fill, 250px);
   grid-gap: 1rem;
   width: 100%;
   height: 69vh;
-  overflow-y: auto;
+  overflow: auto;
 }
 
 .card-container {
   background-color: var(--secondary);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   word-wrap: none;
+  align-items: center;
   color: white;
-  padding: 2rem;
   border-radius: 1rem;
+  height: 250px;
+  width: 250px;
 }
 
 .grid-container::-webkit-scrollbar,
